2011-09-23  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
	* testsuite/Makefile.am: Add testPool.
	* testsuite/testPool.cpp: New file.

	* include/mcs/Pool.h: New file.
	(Pool): use pointer arithmetic.
	(dmcs): use void*.

	* src/mcs/Pool.cpp: Likewise.

2011-09-22  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/Makefile.am (SUBDIRS): Remove duplicate mcs.

2011-09-08  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Put path in debugging information.
	* src/network/OutputDispatcher.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/HandlerThread.h: Turn off some debugging information.
	* include/network/NeighborThread.h: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/RelSatSolverThread.cpp: Likewise.

	* include/network/AsynClient.tcc: Get out when receive no answer.

	* include/dmcs/ModelSessionId.h: Fix comparison.

	* testsuite/testDispatcher.cpp: Fix make check.
	* testsuite/testJoinLeak.cpp: Likewise.

	* testsuite/Makefile.am: Add testSATModelOrder.

	* testsuite/testSATModelOrder.cpp: New file.
	* examples/input.txt: Likewise.
	* examples/fixed_output.txt: Likewise.

2011-09-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Unregister in case of inconsistent join.

	* include/network/BaseDispatcher.h: Add some debugging info.
	* include/network/Handler.tcc: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* src/mcs/ResourceManager.cpp: Likewise.

	* include/dmcs/CommandTypeFactory.h: Parameterize max resource.
	* include/dmcs/ProgramOptions.h: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/network/Server.cpp: Likewise.

2011-08-31  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Send updated path to NeighborOut.

	* src/mcs/ResourceManager.cpp: Add debugging information.

	* include/network/Server.h: Use mutex lock to protect 1st round initialization.
	* src/network/Server.cpp: Likewise.
