@@ -1,3 +1,9 @@
+2011-09-27  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* src/process/ProcessBuf.cpp: Added safe_close() and safe_open()
+	to wrap close() and open() and manage syscall interruptions.
+	(This shall fix problems with too fast clasp exiting.)
+
 2011-09-23  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
 	* testsuite/Makefile.am: Add testPool.
 	* testsuite/testPool.cpp: New file.
